Updates from Overleaf

--- a/conclusiones.tex
+++ b/conclusiones.tex
@@ -1,8 +1,4 @@
-``Software Engineering Is Programming Integrated Over Time'' \label{conclusion}
-
-\bigskip
-Lo que más resalto en este trabajo de fin de grado ha sido la tarea de diseñar un ecosistema modulable desde cero con unas metas marcadas y con el ideal de crear un software que no necesite de cambios en su estructura para crecer, que sea simple e intuitivo, pero útil y que permita la colaboración. Conseguir todas estas características ha requerido una amplia etapa de diseño y prototipado donde las ideas se implementaban y descartaban por igual.\\
-También otro apartado que consumió bastante tiempo fue el manejo de errores. Al ser una aplicación que realiza muchas llamadas, lee y escribe de ficheros y le pide \emph{input} al usuario, hay muchos puntos donde la aplicación puede fallar. Manejar estos errores y pulir la aplicación en general es trabajo que no genera un resultado inmediato, pero hace que la aplicación sea más mantenible y estable.\\
-Por otro lado, me siento muy afortunado de haber podido trabajar con tecnologías con las que me siento cómodo como JavaScript, Go y \verb|fzf|, pero han sido más las que he aprendido y dada la buena experiencia que he tenido con: \verb|jq|, \verb|gh cli| y \verb|GraphQL| comentar que seguramente las utilice en futuros proyectos.\\
-No obstante, me apena no haber podido cumplir con el objetivo de interoperabilidad entre comandos. El comando \verb|view| se podría beneficiar enormemente si pudiese leer de la \emph{standard input} para recibir información de un comando como \verb|data|, pero preferí enfocar el tiempo en mejorar la calidad y usabilidad de todo el ecosistema.\\
-El trabajo de fin de grado está terminado, pero el proyecto puede crecer tanto como desee. Este tipo de proyecto requiere de trabajo constante y prolongado para que tenga acogida en la comunidad. Mis intenciones son seguir contribuyendo a este proyecto y tomarlo como mi proyecto personal y mi vía de contribución al open source.
+Lo que más resalto en este trabajo de fin de grado ha sido la tarea de diseñar una aplicación que sea generalista y fácil de usar para el usuario, pero sin perder la potencia y personalización que ofrecería crear un página web desde cero por el usuario. Es por esto, que siempre que se diseñaba nuevo contenido para el LMS nos preguntábamos si no rompía con la filosofía de que la experiencia de usuario siempre sea buena, y en caso de que no fuera así, aunque fuera algo muy potente, se dejaba de lado para siempre pensar en el usuario. Un ejemplo de ello fue el intentar añadir un sistema para autenticarse en el LMS, pero este sistema tenía la pega de que complicaría mucho lo que tendría que configurar el usuario, por esto aunque la idea era buena y estaba casi terminada se dio marcha atrás. \\
+Aunque gran parte del trabajo ha sido cuesta arriba debido a las diferentes dificultades que encontramos por el camino de crear un LMS que fuera lo mejor posible, al final se consiguió crear un sistema que aunque pueda parecer simple a primera vista, siempre se le da la oportunidad al usuario de controlar casi al 100\% el resultado deseado. \\
+Esto junto al hecho de que aprendí un gran numero de tecnologías, de las que antes no sabía nada o muy poco ha hecho que realmente el trabajo y esfuerzo halla valido la pena. Hay veces que incluso nos dejamos llevar por intentar siempre probar cosas nuevas que llego un punto en el que se tuvo que poner un límite, porque aunque la experiencia de aprender algo nuevo es muy bonita, al final este trabajo tenía una fecha final con la que cumplir, aun así las experiencias finales que me llevo me ayudarán en mi futuro y eso lo agradezco.
+El trabajo de fin de grado está terminado, pero el proyecto puede crecer tanto como desee. Este tipo de proyecto requiere de trabajo constante y prolongado para que tenga acogida en los usuarios. Mis intenciones son seguir en algún momento contribuyendo a este proyecto y tomarlo como un proyecto personal.
