--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,12 +1,10 @@
 ``Software Engineering Is Programming Integrated Over Time''
 
 \bigskip
-What stands out the most in this final degree project has been the task of designing a modular ecosystem from scratch with some set goals and with the ideal of creating a software that does not need changes in its structure to grow, that is simple and intuitive, but useful and that allows collaboration. Achieving all these features
-required an extensive design and prototyping stage, where ideas were implemented and discarded alike.
+What stands out the most in this final degree project is the task of designing an application that is user-friendly and easy to use, while still maintaining the power and customization that would be offered by creating a webpage from scratch. That's why, whenever we designed new content for the LMS, we questioned whether it would break the philosophy of always providing a good user experience. If it didn't align with that goal, even if it was a powerful feature, we set it aside to prioritize the user. An example of this was attempting to add an authentication system to the LMS, but it would have made the user configuration more complex. So, even though the idea was good and almost finished, we decided to backtrack.
 
-Also, another time-consuming section was error handling. Being an application that makes a lot of calls, reads and writes from files and asks for user input, there are many points where the application can fail. Handling these errors and polishing the application in general is work that does not generate an immediate result, but it does make the application more maintainable and stable.
-On the other hand, I feel very fortunate to have been able to work with technologies that I feel comfortable with such as JavaScript, Go and fzf, but there have been more that I have learned and given the good experience I've had with: jq, gh cli and GraphQL, I'm sure I'll use them in future projects.
+Although a large part of the work has been challenging due to the various difficulties we encountered while creating the LMS to be the best it could be, we managed to create a system that, although it may seem simple at first glance, always gives the user the opportunity to control the desired outcome to nearly 100%.
 
-However, I am sorry I have not been able to meet the goal of interoperability between commands. The view command could benefit enormously if it could read from the standard input to receive information from a command such as data, but I preferred to focus my time on improving the quality and usability of the whole ecosystem.
+This, coupled with the fact that I learned a great number of technologies that I knew nothing or very little about before, has made all the work and effort worthwhile. Sometimes, we get carried away trying to always experiment with new things, but there came a point where we had to set a limit because, despite the joy of learning something new, this project had a set deadline. Nevertheless, the final experiences I gained from it will benefit me in the future, and for that, I am grateful.
 
-The final degree work is finished, but the project can grow as much as I want. This type of project requires constant and prolonged work in order to be accepted by the community. My intentions are to continue contributing to this project and take it as my personal project and my way to contribute to open source.
+The final degree project is completed, but the project can continue to grow as much as desired. This type of project requires constant and prolonged work to gain acceptance among users. My intentions are to continue contributing to this project at some point and treat it as a personal endeavor.
