--- a/apendice1.tex
+++ b/apendice1.tex
@@ -2,36 +2,14 @@ Se adjuntan los enlaces a los repositorios de GitHub de los diferentes códigos 
 
 \begin{itemize}
   \item 
-  El código de \verb|gh-edu| se encuentra en
+  EL monorepo con el código del proyecto se encuentra en
 
-  \href{https://github.com/gh-cli-for-education/gh-edu}{{\tt https://github.com/gh-cli-for-education/gh-edu}}
-  
-  \item 
-  El código de \verb|gh-edu-view|: 
-  
-  \href{https://github.com/gh-cli-for-education/gh-edu-view}{{\tt https://github.com/gh-cli-for-education/gh-edu-view}}
-  
-  
-  \item 
-  El código de \verb|gh-edu-data|:
-  
-  \href{https://github.com/gh-cli-for-education/gh-edu-data}{{\tt https://github.com/gh-cli-for-education/gh-edu-data}}
-  
-  \item 
-  El código de \verb|gh-edu-plagiarism|:
-  
-  \href{https://github.com/gh-cli-for-education/gh-edu-plagiarism}{{\tt https://github.com/gh-cli-for-education/gh-edu-plagiarism}}
-  
-  \item Un ejemplo de extensión externa a la comunidad   \href{https://github.com/gh-cli-for-education/}{{\tt gh-cli-for-education}}
-  
-  puede verse en 
-  
-  \href{https://github.com/crguezl/gh-edu-browse}{{\tt https://github.com/crguezl/gh-edu-browse}}
+  \href{https://github.com/gh-cli-for-education/adastra}{{\tt https://github.com/gh-cli-for-education/adastra}}
 
   \item 
   El código de la \verb|memoria|:
 
-  \href{https://github.com/gh-cli-for-education/TFG-2122-Cristo-Garcia-Gonzalez}{{\tt https://github.com/gh-cli-for-education/TFG-2122-Cristo-Garcia-Gonzalez}}
+  \href{https://github.com/gh-cli-for-education/TFG-2223-Jaime-Armas-Rivero-memoria}{{\tt https://github.com/gh-cli-for-education/TFG-2223-Jaime-Armas-Rivero-memoria}}
   
   
 \end{itemize}
