--- a/glosary.tex
+++ b/glosary.tex
@@ -1,46 +1,7 @@
-\newglossaryentry{DSL}{
-    name={DSL},
-    description={
-        Un lenguaje específico de dominio (DSL) es un lenguaje que está dirigido a resolver un tipo particular de problema. El uso de DSL es muy común en informática: CSS, expresiones regulares, make, ant, SQL, muchos bits de Rails, expectativas en JMock, el lenguaje graphviz, los archivo de configuración de strut, etc.
-    }
-}
-
-%\newglossaryentry{GitHub Action}{
-%    name={GitHub Action},
-%    description={
-%        GitHub Actions es una plataforma de integración continua y entrega continua (CI/CD) que permite automatizar la %canalización de tareas como la compilación, pruebas y despliegue, permitiendo crear flujos de trabajo que construyan %nuevos artefactos como publicaciones, releases, imágenes, pdfs, etc.
-%    }
-%}
-
-\newglossaryentry{JIT}
-{
-    name=JIT,
-    description={just-in-time compiler. También conocido en español como \textbf{compilación en tiempo de ejecución}. Es una forma de ejecutar el código informático que implica la compilación durante la ejecución de un programa (en tiempo de ejecución) en lugar de antes de la ejecución}
-}
-
-\newglossaryentry{AOT}
-{
-    name=AOT,
-    description={En informática, la \textbf{compilación anticipada} es el acto de compilar un lenguaje de programación (a menudo) de alto nivel en un lenguaje (a menudo) de bajo nivel antes de la ejecución de un programa, normalmente en tiempo de compilación, para reducir la cantidad de trabajo necesario en tiempo de ejecución.
-    De hecho, dado que todas las compilaciones estáticas se realizan técnicamente con antelación, esta expresión en particular se utiliza a menudo para destacar algún tipo de ventajas de rendimiento del acto de dicha precompilación. El acto de compilar Java a bytecode Java es por tanto raramente referido como AOT ya que es normalmente un requisito, no una optimización}
-}
-
 \newglossaryentry{API}
 {
     name=API,
     description={Una \textbf{interfaz de programación de aplicaciones} es una manera de que dos o más programas informáticos se comuniquen entre sí. Es un tipo de interfaz de software que ofrece un servicio a otras piezas de software}
-}
-
-\newglossaryentry{power users}
-{
-    name=power users,
-    description={Un \textbf{usuario avanzado} es un usuario de ordenadores, software y otros dispositivos electrónicos, que utiliza características avanzadas del hardware informático, sistemas operativos, programas o sitios web que no son utilizados por el usuario medio. Un usuario avanzado puede no tener amplios conocimientos técnicos de los sistemas que utiliza, pero se caracteriza más bien por la competencia o el deseo de hacer el uso más intensivo de los programas o sistemas informáticos}
-}
-
-\newglossaryentry{cache}
-{
-    name=caché,
-    description={Una \textbf{cache} es un componente de hardware o software que almacena datos para que las futuras solicitudes de esos datos puedan ser atendidas más rápidamente; los datos almacenados en una caché pueden ser el resultado de un cálculo anterior o una copia de datos almacenados en otro lugar}
 }
 
 \newglossaryentry{CLI}
@@ -49,46 +10,38 @@
     description={Es un tipo de interfaz de usuario de computadora que permite a los usuarios dar instrucciones a algún programa informático o al sistema operativo por medio de una línea de texto simple}
 }
 
-\newglossaryentry{strategy pattern}
+\newglossaryentry{CWD}
 {
-    name=patrón estrategia,
-    description={En programación informática, el patrón de estrategia (también conocido como patrón de política) es un patrón de diseño de software de comportamiento que permite seleccionar un algoritmo en tiempo de ejecución. En lugar de implementar un único algoritmo directamente, el código recibe instrucciones en tiempo de ejecución sobre cuál de una familia de algoritmos utilizar}
+    name=CWD,
+    description={CWD (Current Working Directory) se refiere al directorio actual en el que se está trabajando dentro de un sistema de archivos. Es la ubicación o carpeta en la que un programa o usuario se encuentra actualmente realizando operaciones o ejecutando comandos}
 }
 
-\newglossaryentry{graceful degradation}{
-    name={degradación gradual},
-    description={La \textbf{tolerancia a los fallos} es la propiedad que permite a un sistema seguir funcionando correctamente en caso de fallo de uno o varios de sus componentes. A diferencia de un sistema diseñado ingenuamente, en el que incluso un pequeño fallo puede provocar una avería total}
+\newglossaryentry{JSX}
+{
+    name=JSX,
+    description={Es una extensión de JavaScript que combina HTML y JavaScript para facilitar la creación de interfaces de usuario en aplicaciones web, especialmente en frameworks como React.}
 }
 
-\newglossaryentry{namespace}{
-    name={espacio de nombre},
-    description={En informática, un \textbf{espacio de nombres} es un conjunto de signos (nombres) que se utilizan para identificar y referirse a objetos de diversos tipos. Un espacio de nombres garantiza que todos los objetos de un conjunto determinado tengan nombres únicos para que puedan ser fácilmente identificados}
+\newglossaryentry{framework}
+{
+    name=framework,
+    description={Un framework es una estructura de software que proporciona herramientas y bibliotecas para facilitar el desarrollo de aplicaciones. Actúa como una base sobre la cual se construyen aplicaciones, ahorrando tiempo al ofrecer soluciones predefinidas para tareas comunes. Los frameworks permiten a los desarrolladores enfocarse en la lógica de su aplicación en lugar de preocuparse por detalles de implementación, lo que agiliza el proceso de desarrollo y promueve la reutilización de código.}
 }
 
-\newglossaryentry{corrutine}{
-    name={corrutina},
-    description={Las \textbf{corrutinas} son componentes de programas informáticos que generalizan las subrutinas para la multitarea no preferente, permitiendo suspender y reanudar la ejecución}
+\newglossaryentry{MPA}
+{
+    name=MPA,
+    description={Multi-Page Application (MPA) se refiere a un tipo de aplicación web que consta de varias páginas individuales. Cada página representa una vista diferente de la aplicación y se carga por separado del servidor cuando el usuario navega entre ellas. A diferencia de las Single-Page Applications (SPA), que cargan una única página y actualizan su contenido de forma dinámica, las MPAs requieren una carga completa de cada página, lo que puede generar una experiencia más tradicional de navegación.}
 }
 
-\newglossaryentry{hash}{
-    name={hash},
-    description={Un \textbf{hash} (que también puede llamarse un condensado o una firma) es un valor calculado a partir de un valor diferente. En la gran mayoría de los casos, este valor está representado en forma de una cadena de caracteres hexadecimales. Los hashs suelen utilizarse para verificar que un archivo no se ha visto corrompido o bien para autentificar a un usuario sin tener que almacenar su contraseña en claro}
+\newglossaryentry{SSR}
+{
+    name=SSR,
+    description={Server-Side Rendering (SSR) es un enfoque en el desarrollo web donde el servidor genera y envía la página completa al cliente como HTML listo para ser mostrado, ofreciendo una carga inicial más rápida.}
 }
 
-\newglossaryentry{regex}{
-    name={expresión regular},
-    plural={expresiones regulares},
-    description={Una \textbf{expresión regular} (abreviada como regex o regexp) es una secuencia de caracteres que especifica un patrón de búsqueda en un texto. Los algoritmos de búsqueda de cadenas suelen utilizar estos patrones para las operaciones de "búsqueda" o "búsqueda y sustitución" de cadenas, o para la validación de entradas}
-}
-
-\newglossaryentry{deserialization}{
-    name={deserializar},
-    plural={deserializa},
-    description={Extraer una estructura de datos de una serie de bytes}
-}
-
-\newglossaryentry{serialization}{
-    name={serializar},
-    plural={serializa},
-    description={Es el proceso de traducir una estructura de datos o el estado de un objeto a un formato que pueda ser almacenado (por ejemplo, en un archivo o en un búfer de datos de la memoria) o transmitido (por ejemplo, a través de una red informática)}
+\newglossaryentry{SSG}
+{
+    name=SSG,
+    description={SSG (Static Site Generation) es un enfoque de desarrollo web donde las páginas web se generan de antemano durante la compilación, lo que resulta en un rendimiento rápido y una menor carga en el servidor.}
 }
