--- a/introduccion.tex
+++ b/introduccion.tex
@@ -1,65 +1,25 @@
 %\section{Motivación}
 \section{Introducción}
-%Repetir aquí el proyecto de TFG
-% Durante muchos años, profesores de programación de todo el mundo han utilizado y siguen utilizando GitHub como plataforma para la enseñanza de asignaturas relacionadas con la programación, el trabajo en equipo y el desarrollo de proyectos. La propia empresa GitHub ha apoyado estas iniciativas dentro de un grupo de acciones que se inscriben bajo el término  GitHub Education. Ello incluye descuentos en plataformas y herramientas para profesores y alumnos, foros específicos de discusión, congresos, becas, y herramientas específicas. Entre estas últimas cabe señalar  GitHub Classroom, la cual da soporte al proceso de asignación de tareas.
-
-% Hace solo dos años GitHub introdujo una herramienta denominada GitHub CLI (a veces referenciada como gh-cli o gh). Es una herramienta de código abierto para utilizar los servicios que provee GitHub, pero desde la línea de comandos.  Es posible ver, crear, clonar, y bifurcar repositorios; crear, cerrar, editar y ver incidencias, etc. Sin embargo el conjunto de funcionalidades  ofrecido es aún bastante menor que el disponible en la interfaz web.
-
-% En agosto del año 2021 los desarrolladores de GitHub Cli añadieron un mecanismo denominado gh-cli extensions (denominado gh-extensions) que facilita que terceros puedan añadir nuevas funcionalidades a gh-cli mediante un repositorio GitHub.
-% En el contexto específico de GitHub Education, las gh-extensions abren nuevas posibilidades para  proveer comandos que facilitan el flujo de trabajo diario de los profesores y alumnos y que pueden ser de uno de estos tipos:
-% \begin{itemize}
-%   \item Creación y manejo de las organizaciones GitHub asociadas a las asignaturas
-%   \item Creación y manejo de asignaciones de tareas dentro de una asignatura
-%   \item Obtención de información sobre las actividades de los alumnos
-%   \item Facilitar la respuesta pronta a las dudas 
-%   \item Facilitar la elaboración de propuestas de mejora a los trabajos realizados por los alumnos
-%   \item Mejorar la eficiencia en los procesos de evaluación 
-% \end{itemize}
 
 En los últimos años, la educación en línea ha cobrado una gran relevancia debido a la pandemia global que obligó a muchos países a implementar medidas de distanciamiento social. Como resultado, muchas instituciones educativas han tenido que adaptarse rápidamente a los sistemas de aprendizaje en línea. Entre estos sistemas, los Learning Management System (LMS) son muy populares debido a su capacidad para ofrecer una plataforma en línea que permite a los profesores compartir recursos y comunicarse con sus alumnos.
 
-En este contexto, \href{https://education.github.com/}{GitHub Education} ha surgido como una plataforma líder en la enseñanza de programación y desarrollo de proyectos en equipo. Para ello, se utiliza \href{https://classroom.github.com/}{GitHub Classroom}, una herramienta que permite a los profesores crear tareas y asignaciones de manera automatizada y que se integra perfectamente con GitHub. Sin embargo, una limitación de GitHub Classroom es que solo permite crear tareas y asignaciones que sean entregadas como repositorios de código en GitHub.
+En este contexto, \verb|GitHub Education| \cite{github-education} ha surgido como una plataforma líder en la enseñanza de programación y desarrollo de proyectos en equipo. Para ello, se utiliza \verb|GitHub Classroom| \cite{github-classroom}, una herramienta que permite a los profesores crear tareas y asignaciones de manera automatizada y que se integra perfectamente con GitHub. Sin embargo, una limitación de GitHub Classroom es que solo permite crear tareas y asignaciones que sean entregadas como repositorios de código en GitHub.
 
-Con el objetivo de abordar esta limitación, se propone una aplicación que utiliza la filosofía de GitHub Classroom pero que permite la creación de páginas estáticas para LMS. La aplicación utiliza \href{https://docs.github.com/es/graphql}{GitHub GraphQL} para obtener información de los repositorios y \href{https://astro.build/}{Astro} para generar las páginas estáticas.
+Con el objetivo de abordar esta limitación, se propone una aplicación que utiliza la filosofía de GitHub Classroom pero que permite la creación de páginas estáticas para LMS. La aplicación utiliza \verb|GitHub GraphQL| \cite{github-graphql} para obtener información de los repositorios y \verb|Astro| \cite{astro} para generar las páginas estáticas.
 
 \section{Antecedentes y estado actual del tema}
-% Uno de los primeros intentos en integrar GitHub al mundo educativo fue \href{https://github.com/education/teachers_pet}{“teachers\_pet”}, una herramienta de la línea de comandos que ayudaba al profesorado a impartir sus clases intentando emular una plataforma de aprendizaje. Cada clase era una organización de GitHub y los alumnos estaban repartidos en equipos en los que estaban solo ellos mismos, de esta manera los profesores podían gestionar todos los repositorios de la organización, dar plantillas con las que los alumnos podían empezar a trabajar, comprobar el progreso, etc.
-%  Más tarde, GitHub respondería a la demanda con Github Classroom  un servicio web de uso más intuitivo que dejaría obsoleto a \verb|teacher's pet|, y que a día de hoy es la más utilizada.
 
-% En lo referente al GitHub CLI ya existía con anterioridad, una herramienta antecesora similar que proveía funcionalidades similares, fue  llamada \verb|hub|, actualmente mantenida por Mislav Marohnić (empleado de GitHub, Inc.). Hub fue creado originalmente por Chris Wanstrath, que junto con Tom Preston, Scott Chacon y P.J. Hyett fundaron GitHub en 2008. al igual que GitHub CLI esta herramienta nos permite interactuar con Github desde la terminal, pero esta se podría considerar un producto personal y más centrado en los denominados \gls{power users}. El 20 de febrero de 2020 Github anuncia Github CLI, el sucesor de hub mantenido y en desarrollo por un equipo oficial de la compañía y más amigable de usar. El 20 de agosto de 2021 sale la versión 2.0 con el comando \verb|extension|\cite{gh-extension}, con la cual los usuarios podrán crear sus propias extensiones que nos permiten generar por nosotros mismos y con relativa facilidad servicios y herramientas que se integren bien con las implementaciones actuales usando  las \gls{API}s de GitHub \verb|REST API|\cite{github-rest-api} y GitHub GraphQL\cite{github-graphql}.
+Existen algunas herramientas en línea populares para la creación de páginas web para la enseñanza, como \verb|Moodle| \cite{moodle} y \verb|Google Classroom| \cite{google-classroom}. Sin embargo, estas herramientas están diseñadas para la educación en general y no específicamente para la enseñanza de programación. Además, aunque son gratuitas, pueden requerir una curva de aprendizaje para su uso efectivo.
 
-% Actualmente, existen cientos de extensiones dirigidas al desarrollador, pero son pocas las que están dedicadas a facilitar la gestión de las organizaciones, en especial aquellas dedicadas a la enseñanza. Este proyecto tiene como objetivo crear una extensión modular de GitHub CLI que complementa a GitHub classroom y que provee funcionalidades como:
-
-% \begin{itemize}
-%     \item Creación y asignación de tareas
-%     \item Seguimiento del progreso de los miembros de la organización
-%     \item Soporte a la gestión de incidencias
-%     \item Facilitar la retroalimentación a los trabajos realizados por los alumnos
-%     \item Interoperabilidad entre subcomandos para permitir comportamientos más complejos
-%     \item Interfaz rápida y amigable
-% \end{itemize}
-
-% Existen algunas herramientas en línea que permiten a los profesores crear páginas web para sus cursos, pero la mayoría de ellas son propietarias y no se integran de manera efectiva con GitHub Classroom. Además, estas herramientas a menudo son costosas y no están diseñadas específicamente para la enseñanza de programación. También está la alternativa de crear la infraestructura deseada a mano lo cual requeriría de conocimientos previos en lo relacionado.   
-
-% Por otro lado, GitHub GraphQL es una API que permite a los desarrolladores obtener información detallada sobre los repositorios de GitHub. Esto permite una mayor flexibilidad en la creación de aplicaciones que se integren con GitHub, como la aplicación propuesta.
-
-% Astro es una herramienta que permite la creación de páginas web estáticas utilizando componentes de JavaScript. Es fácil de usar y tiene una sintaxis clara y concisa, lo que la hace ideal para la creación de páginas web para LMS.
-
-% En resumen, la aplicación propuesta utiliza la filosofía de GitHub Classroom y se integra con GitHub GraphQL y Astro para permitir a los profesores crear páginas web estáticas para LMS de manera efectiva y económica. Esto proporciona una alternativa viable y accesible para la enseñanza de programación en línea.
-% Añadir moodle y google classroom y ventajas y sobre todo desventajas
-% se puede usar gitlab o bitbucket
-
-Existen algunas herramientas en línea populares para la creación de páginas web para la enseñanza, como Moodle y Google Classroom. Sin embargo, estas herramientas están diseñadas para la educación en general y no específicamente para la enseñanza de programación. Además, aunque son gratuitas, pueden requerir una curva de aprendizaje para su uso efectivo.
-
-Por otro lado, GitLab y Bitbucket son plataformas populares para la colaboración y gestión de proyectos de programación. Aunque ambos permiten la creación de páginas web para repositorios, su enfoque principal no es la creación de un LMS completo. GitHub Classroom, por otro lado, es una extensión de GitHub que se centra específicamente en la enseñanza de programación. Permite a los profesores crear repositorios y asignaciones para los estudiantes, y ofrece una integración más efectiva con GitHub GraphQL o GitHub API REST.
+Por otro lado, \verb|GitLab| \cite{gitlab} y \verb|Bitbucket| \cite{bitbucket} son plataformas populares para la colaboración y gestión de proyectos de programación. Aunque ambos permiten la creación de páginas web para repositorios, su enfoque principal no es la creación de un LMS completo. GitHub Classroom, por otro lado, es una extensión de GitHub que se centra específicamente en la enseñanza de programación. Permite a los profesores crear repositorios y asignaciones para los estudiantes, y ofrece una integración más efectiva con GitHub GraphQL o \verb|GitHub API REST| \cite{github-rest}.
 
 La aplicación propuesta utiliza GitHub Classroom, GitHub GraphQL y Astro para proporcionar una alternativa viable y accesible para la creación de páginas web para LMS de programación en línea.
 
-Astro es una herramienta que permite la creación de páginas web estáticas utilizando componentes de JavaScript. Es fácil de usar y tiene una sintaxis clara y concisa, lo que la hace ideal para la creación de páginas web para LMS. Aunque existen otras herramientas para generación de web estáticas como Jekyll o Hugo, la cuales han sido muy populares en los últimos años, en este caso se ha decidido por usar Astro, un framework\cite{framework} nuevo y novedoso.
+Astro es una herramienta que permite la creación de páginas web estáticas utilizando componentes de JavaScript. Es fácil de usar y tiene una sintaxis clara y concisa, lo que la hace ideal para la creación de páginas web para LMS. Aunque existen otras herramientas para generación de web estáticas como \verb|Jekyll| \cite{jekyll} o \verb|Hugo| \cite{hugo}, la cuales han sido muy populares en los últimos años, en este caso se ha decidido por usar Astro, un framework nuevo y novedoso.
 
 Esto se debe a que algunas de las principales desventajas de Jekyll y Hugo es que pueden tener una curva de aprendizaje pronunciada para los nuevos usuarios. La sintaxis y la configuración pueden ser complejas para aquellos que no tienen experiencia previa en la creación de sitios web estáticos. Además, a medida que un proyecto se vuelve más complejo, Jekyll y Hugo pueden requerir más tiempo y esfuerzo para mantener y actualizar.
 
-Mientras que las razones por la que se han elegido a Astro han sido su facilidad de uso, su sintaxis clara y concisa, la oportunidad que ofrecer al integrarse con otros frameworks para UI, como React\cite{react} o Angular\cite{angular}, su integración directa con la metodología Jamstack, su fácil personalización a través de plugins, etc.
+Mientras que las razones por la que se han elegido a Astro han sido su facilidad de uso, su sintaxis clara y concisa, la oportunidad que ofrecer al integrarse con otros frameworks para UI, como \verb|React| \cite{react} o Angular\cite{angular}, su integración directa con la metodología \verb|Jamstack| \cite{jamstack}, su fácil personalización a través de plugins, etc.
 
 Además de GitHub GraphQL, GitHub también proporciona una API REST que permite a los desarrolladores interactuar con los repositorios de GitHub. Aunque la API REST no proporciona la misma cantidad de información detallada que GraphQL, sigue siendo una herramienta poderosa para la integración con GitHub.
 
