--- a/memtfg.bib
+++ b/memtfg.bib
@@ -18,6 +18,7 @@
 
 @online{pnpm-workspaces,
 	author = {{Pnpm}},
+    date = {2023},
 	title = {Workspace | pnpm},
 	url = {https://pnpm.io/workspaces},
 	urldate = {2023-07-10},
@@ -91,4 +92,266 @@
 	type = {software},
 	url = {https://git-scm.com/},
 	version = {2.37.3},
+}
+
+@online{astro-syntax,
+	author = {{Astro}},
+	title = {Astro Syntax},
+	url = {https://docs.astro.build/en/core-concepts/astro-syntax/},
+	urldate = {2023-07-11},
+}
+
+@online{astro-routing,
+	author = {{Astro}},
+	title = {Routing},
+	url = {https://docs.astro.build/en/core-concepts/routing/},
+	urldate = {2023-07-11},
+}
+
+@online{astro-collections,
+	author = {{Astro}},
+	title = {Content collections},
+	url = {https://docs.astro.build/en/guides/content-collections/},
+	urldate = {2023-07-11},
+}
+
+@online{yaml,
+	author = {{Red Hat}},
+	date = {2023-03-03},
+	title = {What is Yaml?},
+	url = {https://www.redhat.com/en/topics/automation/what-is-yaml},
+	urldate = {2023-07-11},
+}
+
+@software{github-education,
+	author = {{GitHub}},
+	title = {Engaged students are the result of using real-world tools - GitHub Education},
+	type = {software},
+	url = {https://education.github.com/},
+}
+
+@software{github-classroom,
+	author = {{GitHub}},
+	title = {GitHub Classroom},
+	type = {software},
+	url = {https://classroom.github.com/},
+}
+
+@software{github-graphql,
+	author = {{GitHub}},
+	date = {2001-07-11},
+	title = {Documentación de GraphQL API para GitHub - Documentación de GitHub},
+	type = {software},
+	url = {https://docs.github.com/es/graphql},
+}
+
+@software{moodle,
+	title = {Moodle - Open-source learning platform | Moodle.org},
+	type = {software},
+	url = {https://moodle.org/?lang=en},
+}
+
+@software{google-classroom,
+	author = {{Google}},
+	title = {Classroom management Tools \& Resources - Google for Education},
+	type = {software},
+	url = {https://classroom.google.com/},
+}
+
+@software{gitlab,
+	author = {{GitLab Inc.}},
+	title = {The DevSecops platform},
+	type = {software},
+	url = {https://about.gitlab.com/},
+}
+
+@software{bitbucket,
+	author = {{Atlassian}},
+	title = {BitBucket | Git solution for teams using Jira},
+	type = {software},
+	url = {https://bitbucket.org/product/},
+}
+
+@software{github-rest,
+	author = {{GitHub}},
+	date = {2022-11-28},
+	title = {GitHub Rest API Documentation - GitHub Docs},
+	type = {software},
+	url = {https://docs.github.com/en/rest?apiVersion=2022-11-28},
+	version = {2022-11-28},
+}
+
+@software{jekyll,
+	author = {given={Tom }, family=Preston-Werner},
+	date = {2023-01-20},
+	title = {Jekyll • Simple, blog-aware, static sites},
+	type = {software},
+	url = {https://jekyllrb.com/},
+	version = {4.3.2},
+}
+
+@software{hugo,
+	date = {2023-06-05},
+	title = {The world’s fastest framework for building websites},
+	type = {software},
+	url = {https://gohugo.io/},
+	version = {0.113.0},
+}
+
+@software{react,
+	author = {{Meta}},
+	date = {2022-06-14},
+	title = {React},
+	type = {software},
+	url = {https://react.dev/},
+	version = {18.2.0},
+}
+
+@software{angular,
+	author = {{Google Inc.}},
+	date = {2023-06-13},
+	title = {Angular},
+	type = {software},
+	url = {https://angular.io/},
+	version = {16.1.0},
+}
+@online{jamstack,
+	author = {{Netlify}},
+	title = {For fast and secure sites | Jamstack},
+	url = {https://jamstack.org/},
+	urldate = {2023-07-13},
+}
+
+@software{js,
+	author = {{ECMA International}},
+	date = {2023-07-08},
+	title = {Javascript | MDN},
+	type = {software},
+	url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript},
+	version = {ECMAScript 2021},
+}
+
+@software{ts,
+	author = {{Microsoft}},
+	date = {2023-06-01},
+	title = {Javascript with syntax for types.},
+	type = {software},
+	url = {https://www.typescriptlang.org/},
+	version = {5.1.3},
+}
+
+@software{github,
+	author = {{Microsoft}},
+	title = {GitHub: Let’s build from here},
+	type = {software},
+	url = {https://github.com/},
+}
+
+@software{overleaf,
+	author = {{Overleaf}},
+	title = {Overleaf, online latex editor},
+	type = {software},
+	url = {https://www.overleaf.com/},
+}
+
+@online{astro-islands,
+	author = {{Astro}},
+	title = {Astro Islands},
+	url = {https://docs.astro.build/en/concepts/islands/},
+	urldate = {2023-07-13},
+}
+
+@online{multipage,
+	title = {MPAS vs. SPAS},
+	url = {https://docs.astro.build/en/concepts/mpa-vs-spa/},
+	urldate = {2023-07-13},
+}
+
+@software{md,
+	author = {given=John, family=Gruber},
+	date = {2004-12-17},
+	title = {Daring Fireball: Markdown},
+	type = {software},
+	url = {https://daringfireball.net/projects/markdown/},
+}
+
+@software{mdx,
+	author = {given-i=J, given=John, family=Otander},
+	date = {2023-02-09},
+	title = {Markdown for the component era | MDX},
+	type = {software},
+	url = {https://mdxjs.com/},
+	version = {2.3.0},
+}
+
+@software{solidjs,
+	author = {{SolidJS}},
+	date = {2023-03-30},
+	title = {SolidJS},
+	type = {software},
+	version = {1.7.0},
+}
+
+@software{tailwind,
+	author = {{Tailwind Labs}},
+	date = {2023-04-25},
+	title = {Tailwind CSS - rapidly build modern websites without ever leaving your HTML.},
+	type = {software},
+	url = {https://tailwindcss.com/},
+	version = {3.3.2},
+}
+
+@software{nodejs,
+	author = {{OpenJS Foundation}},
+	date = {2023-06-20},
+	title = {Node.js},
+	type = {software},
+	url = {https://nodejs.org/en},
+	version = {18.16.1},
+}
+
+@software{yarn,
+	author = {{Meta} and {Google} and {Expo.dev} and {Tilde}},
+	date = {2022-05-10},
+	title = {Home},
+	type = {software},
+	url = {https://yarnpkg.com/},
+	version = {1.22.19},
+}
+
+@software{vercel,
+	author = {{Vercel Inc.}},
+	title = {Vercel: Develop. Preview. Ship. for the best frontend teams},
+	type = {software},
+	url = {https://vercel.com/},
+}
+
+@online{node-install,
+	title = {Download | Node.js},
+	url = {https://nodejs.org/en/download},
+	urldate = {2023-07-13},
+}
+
+@online{node-install-linux,
+	title = {Installing Node.Js via Package Manager | Node.js},
+	url = {https://nodejs.org/en/download/package-manager},
+	urldate = {2023-07-13},
+}
+
+@online{github-account,
+	title = {Registrar una nueva cuenta GitHub - documentación de GitHub},
+	url = {https://docs.github.com/es/get-started/signing-up-for-github/signing-up-for-a-new-github-account},
+	urldate = {2023-07-13},
+}
+
+@online{github-classroom-create,
+	title = {Administrar aulas - documentación de GitHub},
+	url = {https://docs.github.com/es/education/manage-coursework-with-github-classroom/teach-with-github-classroom/manage-classrooms},
+	urldate = {2023-07-13},
+}
+
+@online{tailwind-theme,
+	title = {Theme Configuration - Tailwind CSS},
+	url = {https://tailwindcss.com/docs/theme},
+	urldate = {2023-07-13},
 }
